--- a/Data-Serving/README
+++ b/Data-Serving/README
@@ -1,20 +1,14 @@
-Run on single machine
- - data-serving.sh
-    * Setup and run test on a single machine
+To run the Data-Serving benchmark, you will need one server to provide
+the service and one client to issue requests. They could be the same
+machine if you do not need to isolate their behaviors. *-server.sh is
+supposed to be executed on the server and *-client.sh on client. The steps
+are shown below:
 
-Run on 2 machines (1 server and 1 client)
- - setup-all.sh
-    * Setup on 2 machines, one as server and one as client using
-      setup-server.sh and setup-client.sh respectively
- - setup-server.sh
- - setup-client.sh
- - run-warmup.sh
-    * Load up Cassandra database
- - run-test.sh
-    * Run test on 2 machines
-
-Configuration files
- - dataset-generation.txt
-    * A set of queries to create schema
- - hosts.txt
-    * Hosts configuration for running on 2 machines
+ 1. Set up the server and the client
+   a) setup-server.sh
+   b) setup-client.sh
+ 2. Warm up the server
+   a) warmup-server.sh
+   b) warmup-client.sh
+ 3. Start the test
+   a) start-client.sh
